<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.enphaseenergy.nfcgatewayalpha.TwoFragment">

    <LinearLayout
        android:id="@+id/write_line"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write_toggle_info"
            android:layout_marginRight="10dp"/>

        <Switch
            android:id="@+id/write_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Spinner
        android:padding="5dp"
        android:id="@+id/security_spinner"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/write_line" />

    <include layout="@layout/security_fields"
        android:id="@+id/security_fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/security_spinner"/>

    <EditText android:id="@+id/username_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/security_fields"
        android:gravity="center_horizontal"
        android:hint="@string/username_form_hint" />

    <EditText android:id="@+id/password_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_below="@id/username_form"
        android:inputType="textPassword"
        android:hint="@string/password_form_hint" />

    <EditText android:id="@+id/misc_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_below="@id/password_form"
        android:hint="@string/misc_form_hint" />

</RelativeLayout>
