<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.enphaseenergy.nfcgatewayalpha.ThreeFragment">

    <TextView
        android:id="@+id/no_tag_detected"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="No tag detected"/>

    <LinearLayout
        android:id="@+id/tag_detected"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/time_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_header"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/info_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filler_string"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/uid_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/UID_header"
            android:textColor="@android:color/black"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/uid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filler_string"/>

        <TextView
            android:id="@+id/techlist_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/techlist_header"
            android:textColor="@android:color/black"
            android:paddingTop="10dp"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/techlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filler_string"/>
    </LinearLayout>

</RelativeLayout>
